adding chronometer